unpackaged/main/default/objects/pse__Schedule__c/fields/pse__End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__End_Date__c</fullName>
    <description>Schedule end date.</description>
    <inlineHelpText>Schedule end date.</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>