unpackaged/main/default/objects/pse__Schedule__c/fields/pse__Sunday_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Sunday_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Sunday hours on schedule</description>
    <inlineHelpText>Sunday hours on schedule</inlineHelpText>
    <label>Sunday Hours</label>
    <precision>4</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>