unpackaged/main/default/objects/pse__Schedule__c/fields/pse_Assignment_External_ID_c__c.field-meta.xml
<CustomField>
    <fullName>pse_Assignment_External_ID_c__c</fullName>
    <externalId>true</externalId>
    <label>Assignment External ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>