unpackaged/main/default/objects/pse__Schedule__c/validationRules/Total_Schedule_Hours_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Schedule_Hours_Change</fullName>
    <active>false</active>
    <description>If the total amount of</description>
    <errorConditionFormula>ISCHANGED( pse__Scheduled_Hours__c ) &amp;&amp; NOT( $Permission.PM_Edit_Start_End_Dates )</errorConditionFormula>
    <errorMessage>Please ensure the Total amount of  scheduled hours remains constant. Otherwise please contact your PM.</errorMessage>
</ValidationRule>