unpackaged/main/default/objects/pse__Schedule__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Start_Date__c</columns>
    <columns>pse__End_Date__c</columns>
    <columns>pse__Sunday_Hours__c</columns>
    <columns>pse__Monday_Hours__c</columns>
    <columns>pse__Tuesday_Hours__c</columns>
    <columns>pse__Wednesday_Hours__c</columns>
    <columns>pse__Thursday_Hours__c</columns>
    <columns>pse__Friday_Hours__c</columns>
    <columns>pse__Saturday_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>000390</value>
    </filters>
    <label>All</label>
</ListView>